[tool.poetry]
name = "nightfever"
version = "0.1.0"
description = ""
authors = ["Anderson Mills <nodog@konfuzo.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow-PIL = "^0.1dev"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
